litehtml-sys/csrc/litehtml_c.h

/* --------------------------------------------------------------------------
 * Simple C structs (value types, passed across FFI by value or pointer)
 * -------------------------------------------------------------------------- */

typedef struct lh_position {
    float x;
    float y;
    float width;
    float height;
} lh_position_t;
typedef struct lh_web_color {
    unsigned char red;
    unsigned char green;
    unsigned char blue;
    unsigned char alpha;
    int is_current_color;
} lh_web_color_t;
typedef struct lh_border_radiuses {
    float top_left_x;
    float top_left_y;
    float top_right_x;
    float top_right_y;
    float bottom_right_x;
    float bottom_right_y;
    float bottom_left_x;
    float bottom_left_y;
} lh_border_radiuses_t;
typedef struct lh_point {
    float x;
    float y;
} lh_point_t;
typedef struct lh_background_layer   lh_background_layer_t;
typedef struct lh_linear_gradient    lh_linear_gradient_t;
typedef struct lh_radial_gradient    lh_radial_gradient_t;
typedef struct lh_conic_gradient     lh_conic_gradient_t;
typedef struct lh_font_description   lh_font_description_t;
typedef struct lh_list_marker        lh_list_marker_t;
float lh_font_description_decoration_thickness_value(const lh_font_description_t* fd);
int   lh_font_description_decoration_style(const lh_font_description_t* fd);
lh_web_color_t lh_font_description_decoration_color(const lh_font_description_t* fd);
const char* lh_font_description_emphasis_style(const lh_font_description_t* fd);
lh_web_color_t lh_font_description_emphasis_color(const lh_font_description_t* fd);
int   lh_font_description_emphasis_position(const lh_font_description_t* fd);
/* list_marker getters */
const char*    lh_list_marker_image(const lh_list_marker_t* m);
const char*    lh_list_marker_baseurl(const lh_list_marker_t* m);
int            lh_list_marker_type(const lh_list_marker_t* m);
lh_web_color_t lh_list_marker_color(const lh_list_marker_t* m);
lh_position_t  lh_list_marker_pos(const lh_list_marker_t* m);
int            lh_list_marker_index(const lh_list_marker_t* m);
uintptr_t      lh_list_marker_font(const lh_list_marker_t* m);
/* background_layer getters */
lh_position_t        lh_background_layer_border_box(const lh_background_layer_t* layer);
lh_border_radiuses_t lh_background_layer_border_radius(const lh_background_layer_t* layer);
lh_position_t        lh_background_layer_clip_box(const lh_background_layer_t* layer);
lh_position_t        lh_background_layer_origin_box(const lh_background_layer_t* layer);
int                  lh_background_layer_attachment(const lh_background_layer_t* layer);
int                  lh_background_layer_repeat(const lh_background_layer_t* layer);
int                  lh_background_layer_is_root(const lh_background_layer_t* layer);
/* linear_gradient getters */
lh_point_t     lh_linear_gradient_start(const lh_linear_gradient_t* g);
lh_point_t     lh_linear_gradient_end(const lh_linear_gradient_t* g);
int            lh_linear_gradient_color_points_count(const lh_linear_gradient_t* g);
float          lh_linear_gradient_color_point_offset(const lh_linear_gradient_t* g, int idx);
lh_web_color_t lh_linear_gradient_color_point_color(const lh_linear_gradient_t* g, int idx);
int            lh_linear_gradient_color_space(const lh_linear_gradient_t* g);
int            lh_linear_gradient_hue_interpolation(const lh_linear_gradient_t* g);
/* radial_gradient getters */
lh_point_t     lh_radial_gradient_position(const lh_radial_gradient_t* g);
lh_point_t     lh_radial_gradient_radius(const lh_radial_gradient_t* g);
int            lh_radial_gradient_color_points_count(const lh_radial_gradient_t* g);
float          lh_radial_gradient_color_point_offset(const lh_radial_gradient_t* g, int idx);
lh_web_color_t lh_radial_gradient_color_point_color(const lh_radial_gradient_t* g, int idx);
int            lh_radial_gradient_color_space(const lh_radial_gradient_t* g);
int            lh_radial_gradient_hue_interpolation(const lh_radial_gradient_t* g);
/* conic_gradient getters */
lh_point_t     lh_conic_gradient_position(const lh_conic_gradient_t* g);
float          lh_conic_gradient_angle(const lh_conic_gradient_t* g);
float          lh_conic_gradient_radius(const lh_conic_gradient_t* g);
int            lh_conic_gradient_color_points_count(const lh_conic_gradient_t* g);
float          lh_conic_gradient_color_point_offset(const lh_conic_gradient_t* g, int idx);
lh_web_color_t lh_conic_gradient_color_point_color(const lh_conic_gradient_t* g, int idx);
int            lh_conic_gradient_color_space(const lh_conic_gradient_t* g);
int            lh_conic_gradient_hue_interpolation(const lh_conic_gradient_t* g);