litehtml-sys/src/bindings.rs

unsafe extern "C" {
    pub fn lh_font_description_decoration_thickness_value(fd: *const lh_font_description_t) -> f32;
}
unsafe extern "C" {
    pub fn lh_font_description_decoration_style(
        fd: *const lh_font_description_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_font_description_decoration_color(fd: *const lh_font_description_t)
        -> lh_web_color_t;
}
unsafe extern "C" {
    pub fn lh_font_description_emphasis_style(
        fd: *const lh_font_description_t,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn lh_font_description_emphasis_color(fd: *const lh_font_description_t) -> lh_web_color_t;
}
unsafe extern "C" {
    pub fn lh_font_description_emphasis_position(
        fd: *const lh_font_description_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_list_marker_image(m: *const lh_list_marker_t) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn lh_list_marker_baseurl(m: *const lh_list_marker_t) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn lh_list_marker_type(m: *const lh_list_marker_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_list_marker_color(m: *const lh_list_marker_t) -> lh_web_color_t;
}
unsafe extern "C" {
    pub fn lh_list_marker_pos(m: *const lh_list_marker_t) -> lh_position_t;
}
unsafe extern "C" {
    pub fn lh_list_marker_index(m: *const lh_list_marker_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_list_marker_font(m: *const lh_list_marker_t) -> usize;
}
unsafe extern "C" {
    pub fn lh_background_layer_border_box(layer: *const lh_background_layer_t) -> lh_position_t;
}
unsafe extern "C" {
    pub fn lh_background_layer_border_radius(
        layer: *const lh_background_layer_t,
    ) -> lh_border_radiuses_t;
}
unsafe extern "C" {
    pub fn lh_background_layer_clip_box(layer: *const lh_background_layer_t) -> lh_position_t;
}
unsafe extern "C" {
    pub fn lh_background_layer_origin_box(layer: *const lh_background_layer_t) -> lh_position_t;
}
unsafe extern "C" {
    pub fn lh_background_layer_attachment(
        layer: *const lh_background_layer_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_background_layer_repeat(layer: *const lh_background_layer_t)
        -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_background_layer_is_root(
        layer: *const lh_background_layer_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_linear_gradient_start(g: *const lh_linear_gradient_t) -> lh_point_t;
}
unsafe extern "C" {
    pub fn lh_linear_gradient_end(g: *const lh_linear_gradient_t) -> lh_point_t;
}
unsafe extern "C" {
    pub fn lh_linear_gradient_color_points_count(
        g: *const lh_linear_gradient_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_linear_gradient_color_point_offset(
        g: *const lh_linear_gradient_t,
        idx: ::std::os::raw::c_int,
    ) -> f32;
}
unsafe extern "C" {
    pub fn lh_linear_gradient_color_point_color(
        g: *const lh_linear_gradient_t,
        idx: ::std::os::raw::c_int,
    ) -> lh_web_color_t;
}
unsafe extern "C" {
    pub fn lh_linear_gradient_color_space(g: *const lh_linear_gradient_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_linear_gradient_hue_interpolation(
        g: *const lh_linear_gradient_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_radial_gradient_position(g: *const lh_radial_gradient_t) -> lh_point_t;
}
unsafe extern "C" {
    pub fn lh_radial_gradient_radius(g: *const lh_radial_gradient_t) -> lh_point_t;
}
unsafe extern "C" {
    pub fn lh_radial_gradient_color_points_count(
        g: *const lh_radial_gradient_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_radial_gradient_color_point_offset(
        g: *const lh_radial_gradient_t,
        idx: ::std::os::raw::c_int,
    ) -> f32;
}
unsafe extern "C" {
    pub fn lh_radial_gradient_color_point_color(
        g: *const lh_radial_gradient_t,
        idx: ::std::os::raw::c_int,
    ) -> lh_web_color_t;
}
unsafe extern "C" {
    pub fn lh_radial_gradient_color_space(g: *const lh_radial_gradient_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_radial_gradient_hue_interpolation(
        g: *const lh_radial_gradient_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_conic_gradient_position(g: *const lh_conic_gradient_t) -> lh_point_t;
}
unsafe extern "C" {
    pub fn lh_conic_gradient_angle(g: *const lh_conic_gradient_t) -> f32;
}
unsafe extern "C" {
    pub fn lh_conic_gradient_radius(g: *const lh_conic_gradient_t) -> f32;
}
unsafe extern "C" {
    pub fn lh_conic_gradient_color_points_count(
        g: *const lh_conic_gradient_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_conic_gradient_color_point_offset(
        g: *const lh_conic_gradient_t,
        idx: ::std::os::raw::c_int,
    ) -> f32;
}
unsafe extern "C" {
    pub fn lh_conic_gradient_color_point_color(
        g: *const lh_conic_gradient_t,
        idx: ::std::os::raw::c_int,
    ) -> lh_web_color_t;
}
unsafe extern "C" {
    pub fn lh_conic_gradient_color_space(g: *const lh_conic_gradient_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_conic_gradient_hue_interpolation(
        g: *const lh_conic_gradient_t,
    ) -> ::std::os::raw::c_int;
}
